Issue #2200753 by burnsjeremy, ngreenup: Views ajax pager alignment is broken

--- a/starterkits/less/less/overrides.less
+++ b/starterkits/less/less/overrides.less
@@ -434,7 +434,7 @@ ul li.leaf {
 }
 
 // Views AJAX pager.
-.pagination ul > li > a {
+ul.pagination li > a {
   &.progress-disabled {
     float: left;
   }
